feat: 增加多语言，修复一些 bug
